[package]
name = "duat-catppuccin"
version = "0.3.1"
edition = "2024"
authors = ["AhoyISki"]
description = "The Catppuccin colorschemes for the Duat text editor"
repository = "https://github.com/AhoyISki/duat-catppuccin"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["colorscheme", "duat", "plugin"]
categories = ["command-line-utilities", "text-editors", "config"]

[dependencies]
duat = { version = "0.7", git = "https://github.com/AhoyISki/duat" }
